Style: Styling issues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ca">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <title>MOOC Pediatria per a Pares i Mares - HEALTH TRAINERS</title>
     <link rel="stylesheet" href="./css/estil.css">
 </head>
+
 <body>
     <header>
         <h1>Pediatria per a Pares i Mares</h1>
@@ -16,37 +18,80 @@
         <a class="CTA" href="#">Matricula-t'hi Gratuïtament</a>
     </header>
     <main>
-        <article class="targeta">
-            <h1>Què és?</h1>
-            <p>Aquest curs <b></b>gratuït</b> s'imparteix en modalitat MOOC (Massive Open Online Course) i tracta sobre primera actuació pediàtrica per a pares, mares i cuidadors. El curs està dirigit a tots aquells interessats en adquirir o compartir coneixements davant una urgència o situació de malaltia d’un lactant o nen en edat pediàtrica (0-15 anys). </p>
-        </article>
-        <article class="targeta">
-            <h1>Què hi tractarem?</h1>
-            <p>La formació es dividirà en dos blocs. El primer bloc estarà destinat a que els usuaris del curs adquireixin coneixements sobre la primera atenció en casos d’urgència. En canvi, el segon bloc, estarà destinat a facilitar el maneig domiciliari de situacions patològiques més habituals en l’edat pediàtrica.</p>
-        </article>
-        <article class="targeta">
-            <h1>Per a quí és?</h1>
-            <ul>
-                <li>Pares, mares i cuidadors principals de nadons i nens de 0 a 15 anys.</li>
-                <li>Professionals no sanitaris que treballin en centres de salut pediàtrics.</li>
-                <li>Professionals que es trobin en contacte amb nens: educadors, monitors...</li>                
-            </ul>
-        </article>
-       
-        <article class="sencer">
-            <h1>Programació</h1>
+        <div class="wrapper">
+            <div class="row">
+                <article class="targeta">
+                    <h1>Què és?</h1>
+                    <p>Aquest curs
+                        <b></b>gratuït</b> s'imparteix en modalitat MOOC (Massive Open Online Course) i tracta sobre primera
+                        actuació pediàtrica per a pares, mares i cuidadors. El curs està dirigit a tots aquells interessats
+                        en adquirir o compartir coneixements davant una urgència o situació de malaltia d’un lactant o nen
+                        en edat pediàtrica (0-15 anys). </p>
+                </article>
+                <article class="targeta">
+                    <h1>Què hi tractarem?</h1>
+                    <p>La formació es dividirà en dos blocs. El primer bloc estarà destinat a que els usuaris del curs adquireixin
+                        coneixements sobre la primera atenció en casos d’urgència. En canvi, el segon bloc, estarà destinat
+                        a facilitar el maneig domiciliari de situacions patològiques més habituals en l’edat pediàtrica.</p>
+                </article>
+                <article class="targeta">
+                    <h1>Per a quí és?</h1>
+                    <ul>
+                        <li>Pares, mares i cuidadors principals de nadons i nens de 0 a 15 anys.</li>
+                        <li>Professionals no sanitaris que treballin en centres de salut pediàtrics.</li>
+                        <li>Professionals que es trobin en contacte amb nens: educadors, monitors...</li>
+                    </ul>
+                </article>
+            </div>
+            <div class="row">
+                <article class="sencer">
+                    <div class="programacio-container">
+                        <div class="programacio-cap">
+                            <h1>Programació</h1>
+                        </div>
+                        <div class="programacio-cos">
+                            <div class="setmana">
+                                <div class="setmana-titol">
+                                    1a Setmana
+                                </div>
+                                <div class="setmana-cos">
 
-        </article>
-        <article class="sencer">
-            <h1>Eines de distribució</h1>
-            <p>Per tal de donar a conèixer el nostre MOOC,</p>
-        </article>
+                                </div>
+                            </div>
+                            <div class="setmana">
+                                <div class="setmana-titol">
+                                    2a Setmana
+                                </div>
+                                <div class="setmana-cos">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </article>
+            </div>
+            <div class="row">
+                <article class="sencer">
+                    <h1>Eines de distribució</h1>
+                    <p>Per tal de donar a conèixer el nostre MOOC,</p>
+                </article>
+            </div>
+        </div>
     </main>
     <footer>
-        <p>Aquest espai web és fictici. Respon a un projecte acadèmic. Som estudiants del <b>màster Educació i TIC</b> de la <b>Universitat Oberta de Catalunya</b>. En el sí del mòdul <i>Disseny i gestió de projectes d'e-learning</i> hem realitzat un <i>role playing</i>. Durant aquest exercici, hem "fundat" l'empresa <i>Health Trainers</i>, hem concebut aquest MOOC i n'hem planificat la producció.</p>
+        <p>Aquest espai web és fictici. Respon a un projecte acadèmic. Som estudiants del
+            <b>màster Educació i TIC</b> de la
+            <b>Universitat Oberta de Catalunya</b>. En el sí del mòdul
+            <i>Disseny i gestió de projectes d'e-learning</i> hem realitzat un
+            <i>role playing</i>. Durant aquest exercici, hem "fundat" l'empresa
+            <i>Health Trainers</i>, hem concebut aquest MOOC i n'hem planificat la producció.</p>
         <section>
-            The main picture is a creation by <a href="https://www.flickr.com/photos/quinnanya/4921920567/in/photolist-8uW8vr-4rKBU5-avgxkq-dP72zL-bnyiQL-3yhY-9kTQV6-c4axXf-dP1o7c-c4axGU-dP74bY-am3MX-c4ayhs-4vdFeW-6iCNg-8g4N8N-djJ5L9-6fqEFy-3sTpR1-c4aytm-7B11V9-DhWHuN-4bg6T-6LMBKN-ii4rKD-5EazEn-81khFz-FXGT8-dDuw4u-6sPQWC-4WeEvj-81khtp-fnCyv-7p8yhs-c4ayoN-5pKZmP-P2wtv-dP1o1z-c4axxQ-491fTA-NbrLT-dP1ocp-am3NL-5tU8TX-58mDDX-9JXxPa-DJ9aL-nxbGpT-pEcx-3f3ge" target="_blank">Quinn Dombrowski</a>
+            The main picture is a creation by
+            <a href="https://www.flickr.com/photos/quinnanya/4921920567/in/photolist-8uW8vr-4rKBU5-avgxkq-dP72zL-bnyiQL-3yhY-9kTQV6-c4axXf-dP1o7c-c4axGU-dP74bY-am3MX-c4ayhs-4vdFeW-6iCNg-8g4N8N-djJ5L9-6fqEFy-3sTpR1-c4aytm-7B11V9-DhWHuN-4bg6T-6LMBKN-ii4rKD-5EazEn-81khFz-FXGT8-dDuw4u-6sPQWC-4WeEvj-81khtp-fnCyv-7p8yhs-c4ayoN-5pKZmP-P2wtv-dP1o1z-c4axxQ-491fTA-NbrLT-dP1ocp-am3NL-5tU8TX-58mDDX-9JXxPa-DJ9aL-nxbGpT-pEcx-3f3ge"
+                target="_blank">Quinn Dombrowski</a>
         </section>
     </footer>
 </body>
+
 </html>
