feat: Mobile layout and copy

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <header>
         <h1>Pediatria per a Pares i Mares</h1>
         <h2>Nocions bàsiques sobre la salut dels teus petits</h2>
-        <a class="CTA" href="#">Matricula-t'hi Gratuïtament</a>
+        <a class="CTA" href="#">Matricula-t'hi
+            <br> Gratuïtament</a>
     </header>
     <main>
         <div class="wrapper">
@@ -23,16 +24,16 @@
                 <article class="targeta">
                     <h1>Què és?</h1>
                     <p>Aquest curs
-                        <b></b>gratuït</b> s'imparteix en modalitat MOOC (Massive Open Online Course) i tracta sobre primera
-                        actuació pediàtrica per a pares, mares i cuidadors. El curs està dirigit a tots aquells interessats
-                        en adquirir o compartir coneixements davant una urgència o situació de malaltia d’un lactant o nen
-                        en edat pediàtrica (0-15 anys). </p>
+                        <b>gratuït</b> tracta sobre primera actuació pediàtrica per a pares, mares i cuidadors. L'objectiu del curs és dotar les persones participants
+                        d'un coneixement bàsic per afrontar urgències o situacions de malaltia en infants en edat pediàtrica
+                        (0-15 anys). El curs s'imparteix en modalitat <b>MOOC</b> (Massive Open Online Course) i té una durada de <b>6 setmanes</b>.
+                    </p>
                 </article>
                 <article class="targeta">
                     <h1>Què hi tractarem?</h1>
-                    <p>La formació es dividirà en dos blocs. El primer bloc estarà destinat a que els usuaris del curs adquireixin
-                        coneixements sobre la primera atenció en casos d’urgència. En canvi, el segon bloc, estarà destinat
-                        a facilitar el maneig domiciliari de situacions patològiques més habituals en l’edat pediàtrica.</p>
+                    <p>La formació es dividirà en dos blocs: El primer, estarà destinat a proporcionar coneixements sobre la
+                        primera atenció en casos d’urgència. El segon, estarà destinat a facilitar la gestió domiciliaria
+                        de situacions patològiques més habituals en l’edat pediàtrica.</p>
                 </article>
                 <article class="targeta">
                     <h1>Per a quí és?</h1>
@@ -44,28 +45,50 @@
                 </article>
             </div>
             <div class="row">
-                <article class="sencer">
+                <article class="programa sencer">
                     <div class="programacio-container">
                         <div class="programacio-cap">
-                            <h1>Programació</h1>
+                            <h1>Temari</h1>
                         </div>
                         <div class="programacio-cos">
                             <div class="setmana">
                                 <div class="setmana-titol">
-                                    1a Setmana
+                                    <h2>Bloc 1: Urgències i emergències pediàtriques</h2>
                                 </div>
                                 <div class="setmana-cos">
+                                    <ul>
+                                        <li> Parada Cardiorespiratoria en el lactant</li>
+                                        <li>Parada Cardiorespiratoria en el nen</li>
+                                        <li> Ennuegament i ofegament</li>
+                                        <li> Cremades</li>
+                                        <li> Electrocucions</li>
+                                        <li> Convulsions per febre</li>
+                                        <li> Traumatismes cranials</li>
+                                        <li> Utilització dels recursos sanitaris davant urgències i emergències</li>
 
+
+                                    </ul>
                                 </div>
                             </div>
                             <div class="setmana">
                                 <div class="setmana-titol">
-                                    2a Setmana
+                                    <h2>Bloc 2: Educació sanitària bàsica</h2>
                                 </div>
                                 <div class="setmana-cos">
+                                    <ul>
+                                        <li> Com actuar quan el nen té una gastroenteritis aguda?</li>
+                                        <li> El nen esta refredat, quines mesures hem de prendre?</li>
+                                        <li>Febre després de les vacunes. Que hem de fer?</li>
+                                        <li>Polls a l’escola. Com ho soluciono?</li>
+                                        <li> Ja ha arribat l’estiu! Com prevenir els cops de calor en la infància?</li>
+                                        <li> Malalties més prevalents a la infància, com identificar-les: diabetes mellitus tipus
+                                            I, varicel·la, mononucleosis, exantema víric, infecció d’orina…</li>
 
+                                    </ul>
                                 </div>
                             </div>
+
+
                         </div>
                     </div>
 
@@ -74,7 +97,7 @@
             <div class="row">
                 <article class="sencer">
                     <h1>Eines de distribució</h1>
-                    <p>Per tal de donar a conèixer el nostre MOOC,</p>
+                    <p>Per tal de donar a conèixer el nostre MOOC, hem escollit dues xarxes socials: Twitter i Linkedin</p>
                 </article>
             </div>
         </div>
