feat: CTA functionallity

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Vice Salles">
     <title>MOOC Pediatria per a Pares i Mares - HEALTH TRAINERS</title>
     <link rel="stylesheet" href="./css/estil.css">
+    <script type="text/javascript" src="./js/index.js"></script>
 </head>
 
 <body>
