feat: Social Media Links

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
                 <article class="targeta">
                     <h1>Què és?</h1>
                     <p>Aquest curs
-                        <b>gratuït</b> tracta sobre primera actuació pediàtrica per a pares, mares i cuidadors. L'objectiu del curs és dotar les persones participants
-                        d'un coneixement bàsic per afrontar urgències o situacions de malaltia en infants en edat pediàtrica
-                        (0-15 anys). El curs s'imparteix en modalitat <b>MOOC</b> (Massive Open Online Course) i té una durada de <b>6 setmanes</b>.
+                        <b>gratuït</b> tracta sobre primera actuació pediàtrica per a pares, mares i cuidadors. L'objectiu del
+                        curs és dotar les persones participants d'un coneixement bàsic per afrontar urgències o situacions
+                        de malaltia en infants en edat pediàtrica (0-15 anys). El curs s'imparteix en modalitat
+                        <b>MOOC</b> (Massive Open Online Course) i té una durada de
+                        <b>6 setmanes</b>.
                     </p>
                 </article>
                 <article class="targeta">
@@ -97,8 +99,19 @@
             </div>
             <div class="row">
                 <article class="sencer">
-                    <h1>Eines de distribució</h1>
-                    <p>Per tal de donar a conèixer el nostre MOOC, hem escollit dues xarxes socials: Twitter i Linkedin</p>
+                    <div class="socialMedia">
+                            <a href="https://www.linkedin.com/in/health-trainers-938995163/" target="_blank"></a>
+                                <img src="./img/LinkedIn.png" alt="LinkedIn Health Trainers" title="Linkedin Health Trainers"/>
+                            </a>
+                            <a href="https://twitter.com/_HealthTrainers" target="_blank">
+                                <img src="./img/Twitter.png" alt="Twitter Health Trainers" title="Twitter Health Trainers" />
+                            </a>
+                    </div>
+                    <div class="logo">
+                        <a href="https://healthtrainers162493953.wordpress.com/" target="_blank">
+                            <img src="./img/healthTrainers.png" alt="Health Trainers" title="Health Trainers" />
+                        </a>
+                    </div>
                 </article>
             </div>
         </div>
