fix: Images size

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="row">
                 <article class="sencer">
                     <div class="socialMedia">
-                            <a href="https://www.linkedin.com/in/health-trainers-938995163/" target="_blank"></a>
+                            <a href="https://www.linkedin.com/in/health-trainers-938995163/" target="_blank">
                                 <img src="./img/LinkedIn.png" alt="LinkedIn Health Trainers" title="Linkedin Health Trainers"/>
                             </a>
                             <a href="https://twitter.com/_HealthTrainers" target="_blank">
